logs/militia.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/militia'...
Listing './lib/python3.5/site-packages/militia/tools'...
Listing './lib/python3.5/site-packages/militia/tools/facebook'...
Compiling './lib/python3.5/site-packages/militia/tools/facebook/fb_utils.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (fb_utils.py, line 18)
Listing './lib/python3.5/site-packages/militia/tools/google'...
Listing './lib/python3.5/site-packages/militia/tools/instagram'...
Listing './lib/python3.5/site-packages/militia/tools/twitter'...
Compiling './lib/python3.5/site-packages/militia/tools/twitter/svm-tweets.py'...
***   File "./lib/python3.5/site-packages/militia/tools/twitter/svm-tweets.py", line 63
    print "features length is: "
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/militia/tools/twitter/twitter_utils.py'...
***   File "./lib/python3.5/site-packages/militia/tools/twitter/twitter_utils.py", line 26
    print 'Handle: %s' % user.screen_name
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/militia/tools/wikipedia'...
Compiling './lib/python3.5/site-packages/militia/tools/wikipedia/wiki_utils.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (wiki_utils.py, line 8)
Listing './lib/python3.5/site-packages/militia-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
